<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/showContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_contact"/>
    
    <Button android:id="@+id/returnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home"/>
    
    <Button android:id="@+id/spAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sp_action"/>
    
    <SeekBar android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressDrawable="@drawable/my_bar"/>
    
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone" />

</LinearLayout>
